--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,7 +74,7 @@ select {
 }
 
 
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@100&family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@100;700&family=Roboto+Condensed&display=swap');
 
 
 $primary: #2E8CAD;
